--- a/templates/index.html
+++ b/templates/index.html
@@ -43,14 +43,19 @@
     <form action="/send" method="post">
       <label>Target email:</label><br>
       <input type="text" name="target"><br>
+      <label></label><br>
       <label>Name of the sender (opcional):</label><br>
       <input type="text" name="name"><br>
+      <label></label><br>
       <label>Sender email:</label><br>
       <input type="text" name="sender"><br>
+      <label></label><br>
       <label>The email subject:</label><br>
       <input type="text" name="subject"><br>
+      <label></label><br>
       <label>The email message:</label><br>
       <textarea name="message"></textarea><br>
+      <label></label><br>
       <input type="submit" value="Send the email">
     </form> 
     <footer style="text-align: center;">by 3LF3NIX</footer>
