--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,14 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        background-color: lightgray;
+        background-color: rgb(0, 0, 0);
       }
       form {
         width: 400px;
         margin: 0 auto;
-        background-color: white;
+        background-color: rgb(0, 0, 0);
         padding: 20px;
-        border: 1px solid black;
+        border: 1px solid rgb(62, 255, 4);
         border-radius: 5px;
       }
       label {
@@ -22,12 +22,12 @@
       input[type="text"], textarea {
         width: 100%;
         padding: 10px;
-        border: 1px solid gray;
+        border: 1px solid rgb(59, 253, 0);
         border-radius: 5px;
       }
       input[type="submit"] {
         width: 100%;
-        background-color: green;
+        background-color: rgb(47, 223, 47);
         color: white;
         padding: 10px;
         border: 0;
@@ -39,7 +39,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="color: rgb(0, 255, 0); background-color: black;">
     <form action="/send" method="post">
       <label>Target email:</label><br>
       <input type="text" name="target"><br>
