--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,6 @@
       <label></label><br>
       <input type="submit" value="Send the email">
     </form> 
-    <footer style="text-align: center;">by 3LF3NIX</footer>
+    <footer style="text-align: center;">by 3LF3NIX and Zereza</footer>
   </body>
 </html>
