--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Email spoofer by 3LF3NIX</title>
+    <title>Email spoofer by 3LF3NIX and Zereza</title>
     <style>
       body {
         font-family: Arial, sans-serif;
