--- a/templates/sent.html
+++ b/templates/sent.html
@@ -40,6 +40,8 @@
   <div class="container">
     <h1>Email sent</h1>
     <p>Your email has been successfully sent! Thank you for using this tool :) by zereza and 3LF3NIX</p>
+    <p></p>
+    <a href="/">Click to send another email</a>
   </div>
 </body>
 </html>
