--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Email spoofer by 3LF3NIX and Zereza</title>
+    <title>Email spoofer by GUCHIHACKER and Zereza</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -58,6 +58,6 @@
       <label></label><br>
       <input type="submit" value="Send the email">
     </form> 
-    <footer style="text-align: center;">by 3LF3NIX and Zereza</footer>
+    <footer style="text-align: center;">by GUCHIHACKER and Zereza</footer>
   </body>
 </html>
