--- a/templates/sent.html
+++ b/templates/sent.html
@@ -39,7 +39,7 @@
 <body>
   <div class="container">
     <h1>Email sent</h1>
-    <p>Your email has been successfully sent! Thank you for using this tool :) by zereza and 3LF3NIX</p>
+    <p>Your email has been successfully sent! Thank you for using this tool :) by zereza and GUCHIHACKER</p>
     <p></p>
     <a href="/">Click to send another email</a>
   </div>
